@@ -3,7 +3,8 @@ plugins {
 }
 
 group 'us.florent'
-version '1.0-SNAPSHOT'
+//version '1.0-SNAPSHOT'
+version '3.5'
 
 repositories {
     mavenCentral()
@@ -20,6 +21,10 @@ jar {
     }
 }
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -28,4 +33,7 @@ dependencies {
     compile 'org.mongodb:mongodb-driver-sync:4.0.4'
     compile group: 'javax.json', name: 'javax.json-api', version: '1.1.4'
     compile group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
+
 }
